<resources>
    <string name="app_name">PeopleNet</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="titleStatus">Status</string>
    <string name="hintText">Please Enter 140 Character</string>
    <string name="titleStartService">Start Service</string>
    <string name="titleStopService">Stop Service</string>
    <string name="buttonUpdate">Update</string>
    <string name="titleUsername">Username</string>
    <string name="summaryUsername">Enter Username</string>
    <string name="summaryPassword">Enter Password</string>
    <string name="titlePassword">Password</string>
    <string name="summaryApiRoot">Enter Url</string>
    <string name="titleApiRoot">Api Root</string>
    <string name="titleRefresh">Refresh</string>
    <string name="titleSetting">GupShup Setting</string>
    <string name="titleTimeline">Timeline</string>
    <string name="msgNotificationTitle">New Yamba Status Updates</string>
    <string name="msgNotificationMessage">You\'ve got %d new status update(s)</string>
    <string name="titleProvider">Locale</string>
    <string name="summaryProvider">Choose Provider</string>
    <string name="titleInterval">Interval</string>
    <string name="summaryInterval">Choose Interval</string>
    <string-array name="providers">
        <item>None, please</item>
        <item>GPS via satellites!</item>
        <item>Mobile Network will do</item>
    </string-array>
    <string-array name="providers_values">
        <item>NONE</item>
        <item>gps</item>
        <item>network</item>
    </string-array>

    <string-array name="intervals">
        <item>Never</item>
        <item>Tweety Seconds</item>
        <item>Fifteen minutes</item>
        <item>Half hour</item>
        <item>An hour</item>
        <item>Half day</item>
        <item>Day</item>
    </string-array>
    <!--  -->
    <string-array name="intervalValues">
        <item>0</item>
        <item>20000</item>
        <item>900000</item>
        <item>1800000</item>
        <item>3600000</item>
        <item>43200000</item>
        <item>86400000</item>
    </string-array>
</resources>

