<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="username"
        android:summary="@string/summaryUsername"
        android:title="@string/titleUsername" />

    <EditTextPreference
        android:key="password"
        android:summary="@string/summaryPassword"
        android:title="@string/titlePassword" />

    <EditTextPreference
        android:key="apiRoot"
        android:summary="@string/summaryApiRoot"
        android:title="@string/titleApiRoot" />

    <ListPreference
        android:entries="@array/providers"
        android:entryValues="@array/providers_values"
        android:key="provider"
        android:summary="@string/summaryProvider"
        android:title="@string/titleProvider" />

    <ListPreference
        android:entries="@array/intervals"
        android:entryValues="@array/intervalValues"
        android:key="interval"
        android:summary="@string/summaryInterval"
        android:title="@string/titleInterval" />

</PreferenceScreen>